2018.8/_sources/plugins/available/deblur/visualize-stats.txt
visualize-stats: Visualize Deblur stats per sample.
===================================================



.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime deblur visualize-stats [OPTIONS]

     Display Deblur statistics per sample

   Options:
     --i-deblur-stats ARTIFACT PATH DeblurStats
                                     Summary statistics of the Deblur process.
                                     [required]
     --o-visualization VISUALIZATION PATH
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.deblur.visualizers import visualize_stats

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Visualize Deblur stats per sample.

   Display Deblur statistics per sample

   Parameters
   ----------
   deblur_stats : DeblurStats
       Summary statistics of the Deblur process.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>